# ip_sync

./: CHANGELOG.md  Cargo.toml  README.md  config.sample.toml
package/: ip-sync.service
src/: cli_args.rs  config.rs  ip_utils.rs  logger.rs  main.rs  route53.rs  utils.rs
