[package]
name = "ip_sync"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-credential-types = { version = "1.2.1", features = ["hardcoded-credentials"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-route53 = "1.46.0"
clap = "4.5.18"
env_logger = "0.11.5"
lazy-regex = "3.3.0"
log = "0.4.22"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
tokio = { version = "1", features = ["full"] }
validator = {version = "0.18.0", features = ["derive"]}

[[bin]]
name = "ip_sync"

