[package]
name = "ipsync"
version = "0.2.1"
edition = "2021"

[dependencies]
aws-credential-types = { version = "1.2.1", features = ["hardcoded-credentials"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-route53 = "1.46.0"
clap = "4.5.18"
env_logger = "0.11.5"
hickory-resolver = "0.26.1"
igd-next = "0.17.0"
log = "0.4.22"
regex = "1.12.3"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1.2"
tokio = { version = "1", features = ["full"] }
validator = {version = "0.20.0", features = ["derive"]}
colored = "3.1.1"

[[bin]]
name = "ipsync"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

